--- a/notebooks/Flapping_Demo-03-12-2024.ipynb
+++ b/notebooks/Flapping_Demo-03-12-2024.ipynb
@@ -63,7 +63,14 @@
     {
      "data": {
       "text/plain": [
-       "[CudaDevice(id=0)]"
+       "[CudaDevice(id=0),\n",
+       " CudaDevice(id=1),\n",
+       " CudaDevice(id=2),\n",
+       " CudaDevice(id=3),\n",
+       " CudaDevice(id=4),\n",
+       " CudaDevice(id=5),\n",
+       " CudaDevice(id=6),\n",
+       " CudaDevice(id=7)]"
       ]
      },
      "execution_count": 3,
@@ -478,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 12,
    "id": "0a65cd22-fb0e-413c-9c75-344687c720a8",
    "metadata": {
     "colab": {
