fix pinv distribution problem (probably?)

--- a/notebooks/Flapping_Demo-dist.ipynb
+++ b/notebooks/Flapping_Demo-dist.ipynb
@@ -57,13 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "6cc35d82-3e62-4660-bfd7-7151fdcad55f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import functools\n",
     "from functools import partial\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "faba80d9-462d-4748-b6a1-48a4227dbc5d",
    "metadata": {
     "tags": []
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "e450215c-2d55-4f58-84c1-bdd1b493832f",
    "metadata": {
     "tags": []
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "id": "60d1ae88-3071-418c-96e6-860313021889",
    "metadata": {
     "tags": []
@@ -159,19 +160,27 @@
     "    return tuple([jnp.array(a) for a in list(map(array_utils.laplacian_matrix,subgrid.shape, subgrid.step))])\n",
     "\n",
     "####################################################################\n",
-    "# this requires more investigation to be sure it actually runs distributed and isnt' causing any\n",
-    "# unwanted host-device comms\n",
-    "boundary_layer_widths = (1,1)\n",
-    "laplacians = get_subgrid_laplacians(grid, boundary_layer_widths)\n",
-    "pinv = fast_diagonalization.pseudoinverse(\n",
-    "    laplacians,global_pressure.array.data.dtype, \n",
-    "    hermitian=True,circulant=True,implementation=None)\n",
-    "pinv(np.ones(laplacians[1].shape[0]).astype(np.float32))\n",
+    "# pinv causes some unwanted device-to-device comms at the moment, see fast_diagonalization.py line 213.\n",
+    "# `apply` is a non-pure function depending on `diagonals` which currently lives on device cuda:0\n",
+    "#boundary_layer_widths = (1,1)\n",
+    "#laplacians = get_subgrid_laplacians(grid, boundary_layer_widths)\n",
+    "#pinv = fast_diagonalization.pseudoinverse(\n",
+    "#    laplacians,global_pressure.array.data.dtype, \n",
+    "#    hermitian=True,circulant=True,implementation=None)\n",
+    "#pinv(np.ones((laplacians[0].shape[0], laplacians[1].shape[0])).astype(np.float32))\n",
     "####################################################################\n",
+    "cutoff = 10 * jnp.finfo(jnp.float32).eps\n",
+    "def func(v):                                                                                                                                                                          \n",
+    "    with np.errstate(divide='ignore', invalid='ignore'):                                                                                                                                \n",
+    "        return np.where(abs(v) > cutoff, 1 / v, 0)  \n",
+    "eigenvalues = ([np.fft.fft(op[:, 0]) for op in laplacians[:-1]]+ [np.fft.rfft(laplacians[-1][:, 0])]) \n",
+    "summed_eigenvalues = functools.reduce(np.add.outer, eigenvalues)                                                                                                                      \n",
+    "diagonals = jnp.asarray(func(summed_eigenvalues).real) \n",
+    "\n",
     "\n",
     "    \n",
-    "@partial(shard_map, mesh=mesh2d, in_specs=(P('i','j'),(P('i','j'), P('i','j')), None,None,(None,None), None), out_specs=((P('i','j'),P('i','j')), P('i','j')))\n",
-    "def evolve_navier_stokes(pressure_field, velocities, grid, boundary_layer_widths, laplacians, num_steps):\n",
+    "@partial(shard_map, mesh=mesh2d, in_specs=(P('i','j'),(P('i','j'), P('i','j')), None,None,P(),None), out_specs=((P('i','j'),P('i','j')), P('i','j')))\n",
+    "def evolve_navier_stokes(pressure_field, velocities, grid, boundary_layer_widths, diags, num_steps):\n",
     "    #create a subgrid for the current patch\n",
     "    i = jax.lax.axis_index('i')\n",
     "    j = jax.lax.axis_index('j')\n",
@@ -180,8 +189,8 @@
     "    explicit_update = equations.navier_stokes_explicit_terms(\n",
     "        density=1.0, viscosity=1.0, dt=5E-4,grid=subgrid, convect=convect, diffuse=diffusion.diffuse, forcing=None)\n",
     "    \n",
-    "    \n",
-    " \n",
+    "    def pinv(rhs):                                                                                                                                                       \n",
+    "        return jnp.fft.irfftn(diags * jnp.fft.rfftn(rhs)).astype(jnp.float32)\n",
     "      \n",
     "    # hard coded boundary condition values in each direction\n",
     "    bc_fns = [lambda t: 0.0 for _ in range(4)]\n",
@@ -220,15 +229,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "8778b65e-0fed-4c0d-96ce-864702f5a591",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FINAL RESULT:\n",
+      " ((Array([[0.7846096 , 0.9166402 , 0.99190587, ..., 1.0778004 , 1.0995548 ,\n",
+      "        1.045899  ],\n",
+      "       [0.83246714, 0.89263207, 0.95435154, ..., 1.0545369 , 1.0603619 ,\n",
+      "        1.0133866 ],\n",
+      "       [0.87897754, 0.899316  , 0.9387751 , ..., 1.0390497 , 1.0380458 ,\n",
+      "        1.0022813 ],\n",
+      "       ...,\n",
+      "       [1.1117879 , 1.0895467 , 1.0499386 , ..., 0.96181417, 0.8647968 ,\n",
+      "        0.7391574 ],\n",
+      "       [1.1560471 , 1.1305327 , 1.0745665 , ..., 0.9993733 , 0.9001914 ,\n",
+      "        0.6691858 ],\n",
+      "       [1.2276124 , 1.1907307 , 1.120479  , ..., 1.0372957 , 0.9739584 ,\n",
+      "        0.68638813]], dtype=float32), Array([[0.7846096 , 0.9166402 , 0.99190587, ..., 1.0778004 , 1.0995548 ,\n",
+      "        1.045899  ],\n",
+      "       [0.83246714, 0.89263207, 0.95435154, ..., 1.0545369 , 1.0603619 ,\n",
+      "        1.0133866 ],\n",
+      "       [0.87897754, 0.899316  , 0.9387751 , ..., 1.0390497 , 1.0380458 ,\n",
+      "        1.0022813 ],\n",
+      "       ...,\n",
+      "       [1.1117879 , 1.0895467 , 1.0499386 , ..., 0.96181417, 0.8647968 ,\n",
+      "        0.7391574 ],\n",
+      "       [1.1560471 , 1.1305327 , 1.0745665 , ..., 0.9993733 , 0.9001914 ,\n",
+      "        0.6691858 ],\n",
+      "       [1.2276124 , 1.1907307 , 1.120479  , ..., 1.0372957 , 0.9739584 ,\n",
+      "        0.68638813]], dtype=float32)), Array([[-0.02696462, -0.02337312, -0.01980336, ...,  0.01203887,\n",
+      "         0.01176874,  0.00605244],\n",
+      "       [-0.0190822 , -0.02058822, -0.01948981, ...,  0.01049147,\n",
+      "         0.00966961,  0.00485194],\n",
+      "       [-0.01488201, -0.01804929, -0.01855072, ...,  0.00949805,\n",
+      "         0.00858273,  0.00481291],\n",
+      "       ...,\n",
+      "       [-0.02164793, -0.01907983, -0.01461046, ...,  0.02401114,\n",
+      "         0.02792769,  0.02409087],\n",
+      "       [-0.02589543, -0.02153033, -0.01563641, ...,  0.02386959,\n",
+      "         0.03120995,  0.03348837],\n",
+      "       [-0.02814809, -0.02393543, -0.01722105, ...,  0.02258045,\n",
+      "         0.03230046,  0.04409261]], dtype=float32))\n"
+     ]
+    }
+   ],
    "source": [
     "subgrid_laplacians = get_subgrid_laplacians(grid, boundary_layer_widths)\n",
-    "y = evolve_navier_stokes(global_pressure.array.data, (vx_0.array.data, vy_0.array.data), grid,boundary_layer_widths, subgrid_laplacians, 4)\n",
+    "y = evolve_navier_stokes(global_pressure.array.data, (vx_0.array.data, vy_0.array.data), grid,boundary_layer_widths, diagonals, 4)\n",
     "print('FINAL RESULT:\\n', y)"
    ]
   },
