--- a/notebooks/Flapping_Demo-dist.ipynb
+++ b/notebooks/Flapping_Demo-dist.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "48f8bb7c-e30c-4cd0-855b-1dabd408a7b8",
    "metadata": {
     "id": "48f8bb7c-e30c-4cd0-855b-1dabd408a7b8",
@@ -52,7 +52,7 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "from jax_ib.base import particle_class as pc\n",
-    "from jax_ib.base import grids, interpolation, fast_diagonalization, boundaries, pressure, diffusion, advection, finite_differences, IBM_Force,convolution_functions,particle_motion, equations\n",
+    "from jax_ib.base import grids, interpolation, fast_diagonalization, boundaries, pressure as prs, diffusion, advection, finite_differences, IBM_Force,convolution_functions,particle_motion, equations\n",
     "import jax_cfd.base as cfd\n",
     "import jax_ib.MD as MD\n",
     "from jax import random\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "a6f7f60e-9e9f-4680-8d3c-9eda5df473ac",
    "metadata": {
     "tags": []
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "1780eba6-0280-4755-a47d-3d45ac2d09bc",
    "metadata": {
     "tags": []
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "1eda204e-c16b-4574-958d-45d04bca9200",
    "metadata": {
     "tags": []
@@ -279,7 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
+   "id": "f7283a78-04b8-4756-bbe2-1db0e24dcc80",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "eigvals = tuple([np.fft.fft(array_utils.laplacian_column(size, step)) for size, step in zip(grid.shape, grid.step)]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "60d1ae88-3071-418c-96e6-860313021889",
    "metadata": {
     "tags": []
@@ -294,64 +306,40 @@
     "surf_fn =  lambda field,xp,yp:convolution_functions.convolve(field,xp,yp,convolution_functions.gaussian)\n",
     "\n",
     "\n",
-    "\n",
-    "@partial(shard_map, mesh=mesh, in_specs=(P('i','j'),(P('i','j'), P('i','j')), None,None,P(),None, P()), \n",
+    "@partial(jax.jit, static_argnums = (3,4,5))\n",
+    "@partial(shard_map, mesh=mesh, in_specs=(P('i','j'),(P('i','j'), P('i','j')),(P('i'), P('j')),None,None,None), \n",
     "         out_specs=(P('i','j'), P('i','j')))\n",
-    "def evolve_navier_stokes(pressure_field, velocities, grid, boundary_layer_widths, diags, num_steps,dt):\n",
+    "def evolve_navier_stokes(pressure, velocities,laplacian_eigenvalues, width, num_steps,dt):\n",
     "    #create a subgrid for the current patch\n",
     "    i = jax.lax.axis_index('i')\n",
     "    j = jax.lax.axis_index('j')\n",
-    "    subgrid = grid.subgrid((i,j), boundary_layer_widths=boundary_layer_widths)\n",
+    "    subgrid = pressure.grid.subgrid((i, j), width)\n",
     "    explicit_update = equations.navier_stokes_explicit_terms(\n",
     "        density=1.0, viscosity=1.0, dt=5E-4,grid=subgrid, convect=convect, diffuse=diffusion.diffuse, forcing=None)\n",
     "    \n",
     "    surface_velocity = lambda f,x,y: convolution_functions.mesh_convolve(f,x,y,convolution_functions.gaussian, axis_names=['i','j'])\n",
-    "    \n",
-    "    #forcex, forcey = IBM_Force.immersed_boundary_force(\n",
-    "    #    local_velocities, obj_fns, convolution_functions.gaussian, surface_velocity, t, dt)\n",
-    "          \n",
+    "    cutoff = 10 * jnp.finfo(jnp.float32).eps                                                                                                                        \n",
+    "    eigvals = jnp.add.outer(laplacian_eigenvalues[0], laplacian_eigenvalues[1].T)                                                                                   \n",
+    "    pinv = fast_diagonalization.pseudo_poisson_inversion(eigvals, jnp.complex128, ('i','j'), cutoff)            \n",
     "    # hard coded boundary condition values in each direction\n",
-    "    bc_fns = [lambda t: 0.0 for _ in range(4)]\n",
-    "    ux_bc=((0.0, 0.0), (0.0, 0.0))\n",
-    "    uy_bc=((0.0, 0.0), (0.0, 0.0))\n",
-    "    pressure_bc = ((0.0, 0.0), (0.0, 0.0))\n",
+    "    t = 1.0\n",
+    "    local_pressure = pressure.to_subgrid((i,j), width).shard_pad(width)\n",
+    "    local_velocities = tuple([u.to_subgrid((i,j), width).shard_pad(width) for u in velocities])\n",
+    "    #print(subgrid.shape, [(v.width, v.shape) for v in local_velocities])\n",
+    "    explicit = tuple([v.crop(width) for v in explicit_update(local_velocities)])\n",
+    "    dP = tuple([dp.crop(width) for dp in finite_differences.forward_difference(local_pressure)])\n",
+    "    local_u_star = tuple([u.crop(width).data + dt * e.data - dp.data for u, e, dp in zip(local_velocities, explicit, dP)])\n",
+    "    local_u_star = tuple([grids.GridVariable(\n",
+    "        grids.GridArray(u, os, pressure.grid.subgrid((i, j), 0), width=0), v.bc) for os, u, v in zip(subgrid.cell_faces, local_u_star, velocities)])\n",
     "    \n",
-    "    pressure_bc = boundaries.new_periodic_boundary_conditions(ndim=2,bc_vals=pressure_bc,bc_fn=bc_fns,time_stamp=0.0)\n",
-    "    velocity_bcs = (boundaries.new_periodic_boundary_conditions(ndim=2,bc_vals=ux_bc,bc_fn=bc_fns,time_stamp=0.0),\n",
-    "                    boundaries.new_periodic_boundary_conditions(ndim=2,bc_vals=uy_bc,bc_fn=bc_fns,time_stamp=0.0))\n",
-    "    \n",
-    "    ux, uy = velocities\n",
-    "    ux_trajectory = []\n",
-    "    uy_trajectory = []\n",
-    "    pressure_trajectory = []\n",
-    "    for step in range(num_steps):\n",
-    "        t = step * dt\n",
-    "        local_pressure = extend(pressure_field, subgrid, pressure_bc)\n",
-    "        local_ux = extend(ux, subgrid, velocity_bcs[0])\n",
-    "        local_uy = extend(uy, subgrid, velocity_bcs[1])\n",
-    "\n",
-    "    \n",
-    "        explicit = explicit_update((local_ux, local_uy))\n",
-    "        dP = finite_differences.forward_difference(local_pressure)\n",
-    "\n",
-    "        local_u_star = tuple([u.data + dt * e.data - dp.data for u, e, dp in zip((local_ux, local_uy), explicit, dP)])\n",
-    "        local_u_star = tuple([grids.GridVariable(\n",
-    "            grids.GridArray(u, os, subgrid), bc) for os, u, bc in zip(subgrid.cell_faces, local_u_star, velocity_bcs)])\n",
-    "        #forces = IBM_Force.immersed_boundary_force(\n",
-    "        #    local_u_star,[ellipse_position],convolution_functions.gaussian,surf_fn, t, dt)\n",
+    "    forces = IBM_Force.immersed_boundary_force(\n",
+    "        local_u_star,[ellipse_position],convolution_functions.gaussian,surf_fn, t, dt)\n",
     "      \n",
-    "        #local_u_star_star = tuple([u.data + dt * force.data for u, force in zip(local_u_star, forces)])\n",
-    "        local_u_star_star = tuple([grids.GridVariable(grids.GridArray(u, offset, subgrid), bc) for u, bc, offset in zip(local_u_star_star, velocity_bcs, subgrid.cell_faces)])\n",
-    "        local_u_final, new_local_pressure= pressure.projection_and_update_pressure_pinv(local_pressure, local_u_star_star, pinv)\n",
-    "        \n",
-    "        ux = local_u_final[0].data[1:-1,1:-1]\n",
-    "        uy = local_u_final[1].data[1:-1,1:-1]\n",
-    "        \n",
-    "        pressure_field = new_local_pressure.data[1:-1,1:-1]\n",
-    "        ux_trajectory.append(ux)\n",
-    "        uy_trajectory.append(uy)\n",
-    "        pressure_trajectory.append(pressure_field)\n",
-    "    return jnp.stack(ux_trajectory, axis=2), jnp.stack(uy_trajectory, axis=2)\n",
+    "    local_u_star_star = tuple([u.data + dt * force.data for u, force in zip(local_u_star, forces)])\n",
+    "    local_u_star_star = tuple([grids.GridVariable(\n",
+    "        grids.GridArray(u, offset,  pressure.grid.subgrid((i, j), 1), width=0), v.bc) for u, v, offset in zip(local_u_star_star, velocities, subgrid.cell_faces)])\n",
+    "    local_u_projected, local_pressure = prs.projection_and_update_pressure_sharded(local_pressure.crop(width), local_u_star_star, pinv,width) \n",
+    "    return local_u_projected\n",
     "\n",
     "\n",
     "\n"
@@ -359,11 +347,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "dcae2495-9224-4362-a092-02903d17fb42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\n",
+       " GridVariable\n",
+       "      GridArray\n",
+       "         Array([[0.32937677+1.02318154e-12j, 0.15079483+9.60653779e-13j,\n",
+       "                 1.04617015+9.26547727e-13j, ..., 0.53996935+1.01749720e-12j,\n",
+       "                 0.77881245+1.26192390e-12j, 0.50705641+1.23918653e-12j],\n",
+       "                [0.32571451+1.07434062e-12j, 0.42455926+1.00044417e-12j,\n",
+       "                 0.68286388+9.40758582e-13j, ..., 0.71634587+1.04023457e-12j,\n",
+       "                 0.51249076+1.10844667e-12j, 0.78255086+1.07434062e-12j],\n",
+       "                [0.29190457+1.04876108e-12j, 0.36493684+9.91917659e-13j,\n",
+       "                 0.99425488+9.49285095e-13j, ..., 0.14661316+1.01749720e-12j,\n",
+       "                 0.60668949+1.06297193e-12j, 0.65201728+1.03455022e-12j],\n",
+       "                ...,\n",
+       "                [0.69699983+1.42108547e-15j, 0.63523621-9.91207116e-14j,\n",
+       "                 0.28985527-1.14397380e-13j, ..., 0.88213766+2.64321898e-13j,\n",
+       "                 0.25662593+3.55626639e-13j, 0.25366069+2.79953838e-13j],\n",
+       "                [0.47740226+4.33786340e-13j, 0.73160705+5.78381787e-13j,\n",
+       "                 0.23014059+6.27409236e-13j, ..., 0.72779821-1.21076482e-12j,\n",
+       "                 0.41554133-9.04876174e-13j, 0.48959243-7.63833441e-13j],\n",
+       "                [0.72839965+1.13367093e-12j, 0.59235894+1.14468435e-12j,\n",
+       "                 0.36267266+1.16600063e-12j, ..., 0.5762248 -4.81037432e-13j,\n",
+       "                 0.56881367+7.18713977e-13j, 0.31519033+5.03774800e-13j]],      dtype=complex128)\n",
+       "         Grid(shape=(66, 130), step=(Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>, Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>), domain=((Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>, Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>), (Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>, Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>)), periods=(5, 5), device_mesh=None)\n",
+       "         offset: (1.0, 0.5)\n",
+       "     Boundary Condition: ConstantBoundaryConditions(types=(('periodic', 'periodic'), ('periodic', 'periodic')), bc_values=((0.0, 0.0), (0.0, 0.0)), boundary_fn=[<function <lambda> at 0x7f5de464a2a0>, <function <lambda> at 0x7f5de464a160>, <function <lambda> at 0x7f5de4648f40>, <function <lambda> at 0x7f5de464a0c0>], time_stamp=0.0),\n",
+       " \n",
+       " GridVariable\n",
+       "      GridArray\n",
+       "         Array([[0.63104106+1.10276233e-12j, 1.07260517+1.04591891e-12j,\n",
+       "                 0.38910767+1.03455022e-12j, ..., 0.63388305+4.66116035e-13j,\n",
+       "                 0.42388426+1.81898940e-13j, 0.23201818+1.35287337e-12j],\n",
+       "                [0.44583654+1.04023457e-12j, 0.17207211+1.01181286e-12j,\n",
+       "                 0.53537838+1.00612851e-12j, ..., 0.45134703+7.10542736e-13j,\n",
+       "                 0.71766872+1.59161573e-13j, 0.44217428+1.13686838e-12j],\n",
+       "                [0.71356659+9.66338121e-13j, 0.773189  +9.52127266e-13j,\n",
+       "                 0.46179801+9.74864633e-13j, ..., 0.64342181+7.78754838e-13j,\n",
+       "                 0.54922308+1.25055521e-13j, 0.67975665+1.13686838e-12j],\n",
+       "                ...,\n",
+       "                [0.62716493+1.04769526e-12j, 0.49492735+9.90851845e-13j,\n",
+       "                 0.65746922+9.91207116e-13j, ..., 0.25773623-1.13082876e-12j,\n",
+       "                 0.67035381+3.31468186e-13j, 0.87805396-1.96109795e-13j],\n",
+       "                [0.29856871+9.47153467e-13j, 0.20219787+9.75575176e-13j,\n",
+       "                 0.26191255+9.75575176e-13j, ..., 0.47381827-1.03952402e-12j,\n",
+       "                 0.31490287+2.55795385e-13j, 0.07897114-4.74642547e-13j],\n",
+       "                [0.39213242+1.09174891e-12j, 0.53138052+1.02460262e-12j,\n",
+       "                 0.39884846+1.02176045e-12j, ..., 0.62200005-7.33635375e-13j,\n",
+       "                 0.46872771+3.96838118e-13j, 0.64312981+7.22977234e-13j]],      dtype=complex128)\n",
+       "         Grid(shape=(66, 130), step=(Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>, Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>), domain=((Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>, Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>), (Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>, Traced<ShapedArray(float32[])>with<DynamicJaxprTrace(level=1/1)>)), periods=(5, 5), device_mesh=None)\n",
+       "         offset: (0.5, 1.0)\n",
+       "     Boundary Condition: ConstantBoundaryConditions(types=(('periodic', 'periodic'), ('periodic', 'periodic')), bc_values=((0.0, 0.0), (0.0, 0.0)), boundary_fn=[<function <lambda> at 0x7f5de464a2a0>, <function <lambda> at 0x7f5de464a160>, <function <lambda> at 0x7f5de4648f40>, <function <lambda> at 0x7f5de464a0c0>], time_stamp=0.0))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evolve_navier_stokes(pressure0, velocities,eigvals, 1, 2,dt)"
+   ]
   },
   {
    "cell_type": "code",
