* replace jax.vmap calls with loops to save memory * streamline code in IBM_Force.py module * fix tests

--- a/notebooks/Flapping_Demo-dist.ipynb
+++ b/notebooks/Flapping_Demo-dist.ipynb
@@ -13,12 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "e30dec93-f590-4a9b-9e5a-aa667467eb73",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -26,19 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5aa1c5d2-7e94-423b-b445-02c0e02f3afe",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import jax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "12ca2755-4095-44e4-bf33-e6bb148d9553",
    "metadata": {
     "tags": []
@@ -51,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "fd6b81be-7b39-429a-8046-856616f60606",
    "metadata": {
     "tags": []
@@ -70,7 +67,7 @@
        " CudaDevice(id=7)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "48f8bb7c-e30c-4cd0-855b-1dabd408a7b8",
    "metadata": {
     "id": "48f8bb7c-e30c-4cd0-855b-1dabd408a7b8",
@@ -138,38 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "994380dd-f3bb-4c0f-95de-33085aa41ed0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'jax_ib.base.pressure' from '/home/martin_ganahl/git_repos/jax_ib/jax_ib/base/pressure.py'>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ib.pressure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "a6f7f60e-9e9f-4680-8d3c-9eda5df473ac",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "N = 128\n",
-    "M = 8\n",
+    "N = 16\n",
+    "M = 2\n",
     "α, β = 1,1\n",
     "As = [[None for _ in range(M)] for _ in range(M)]\n",
     "subA = np.exp(-2*np.pi*1j*np.outer(np.arange(N//M), np.arange(N//M))/N)\n",
@@ -197,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 52,
    "id": "907401e7-a42c-47dd-b629-66633b51cc3a",
    "metadata": {
     "tags": []
@@ -210,7 +184,7 @@
     "dt=1e-4        # time step \n",
     "\n",
     "num_boundaries = 4 # in two dimensions there are 4 boundaries\n",
-    "N = 2**10\n",
+    "N = 2**13\n",
     "L = 15.0\n",
     "domain = ((0.0,L),(0.0,L))\n",
     "size=(N,N)\n",
@@ -220,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 54,
    "id": "d5cf4ac9-3398-4179-9c4b-cf937b82c8ec",
    "metadata": {
     "tags": []
@@ -232,7 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 27,
+   "id": "eb12d8ac-9cbc-4cfe-b21e-df8f99f103ca",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pfft = jax.jit(shard_map(fft.fft, mesh=mesh, in_specs = (P('i','j'),None,None), out_specs = P('i','j')), static_argnums = (1,2))\n",
+    "jit_fft_lowered  = pfft.lower(fft_input)\n",
+    "jit_fft_compiled = jit_fft_lowered.compile()\n",
+    "\n",
+    "print(jit_fft_compiled.as_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "67f24c79-085d-46cb-8905-37a2a5e3ed70",
    "metadata": {
     "tags": []
@@ -244,7 +234,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
+   "id": "0da76166-e51e-451a-95e3-cead49b6600b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "string = pfft.lower(pressure.data, 0, 'i').compile().as_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d1552034-f504-437c-b9f1-361a0303983f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'reduce' in string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "553040cf-ec5d-4a5b-b7e3-8089eb8181aa",
    "metadata": {
     "tags": []
@@ -277,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 77,
    "id": "1780eba6-0280-4755-a47d-3d45ac2d09bc",
    "metadata": {
     "tags": []
@@ -334,12 +359,32 @@
     "\n",
     "def com_rotation(parameters, t):\n",
     "    a,b = com_motion(parameters, t)\n",
-    "    return -a + b\n"
+    "    return -a + b\n",
+    "\n",
+    "def get_circle(U, domain, D=1.0, npoints=200):\n",
+    "    geometry_params = jnp.array([D, D])\n",
+    "    initial_com = jnp.array([domain[0][1]*0.5,domain[1][1]*0.5]) \n",
+    "    x, y = ellipse(geometry_params, npoints)\n",
+    "    def circle(t):\n",
+    "        return x + U*t, y\n",
+    "    return circle\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 78,
+   "id": "7b796b95-437b-44b0-8cfa-a4654a15dc74",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "circle = get_circle(U=1.0, domain=((0,L),(0,L)), D=1.0, npoints=2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "42813745-f509-4eae-8e86-8ea483a280e0",
    "metadata": {
     "tags": []
@@ -371,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "976fee4c-2cba-4283-abd7-f3f34aff7974",
    "metadata": {},
    "outputs": [],
